--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
     - name: ok
       run: start chrome https://yoelmod.blogspot.com
     - name: ok
-      timeout-minutes: 1
+      run: sleep 1
     - name: listo
       run: exit
