--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,14 @@ jobs:
         NUM_JOBS: 900
         JOB: ${{ matrix.go }}
     steps:
-    - name: ok
-      run: start chrome https://yoelmod.blogspot.com
-    - name: ok
-      run: sleep 40
-    - name: listo
-      run: exit
+      - name: Checkout código fuente
+        uses: actions/checkout@v2
+      - name: Instalar Chrome
+        uses: jeremyvreeken/chrome-win-action@v1
+      - name: Abrir página web y hacer pausa de 40 segundos
+        run: |
+          "C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" https://yoelmod.blogspot.com
+          echo "Haciendo una pausa de 40 segundos..."
+          ping 127.0.0.1 -n 40 > nul
+      - name: listo
+        run: exit
