--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Open webpage and scroll
         run: |
           from selenium import webdriver
-          from selenium.webdriver.common.keys import Keys
+          selenium.webdriver.common.keys import Keys
 
           driver = webdriver.Firefox()
           driver.get("https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html")
