--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         JOB: ${{ matrix.go }}
     steps:
     - name: todo
-      run: open -a "Google Chrome" "https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html"
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html"
