--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,24 @@ jobs:
       matrix:
         go: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.1, 2.2]
         flag: [A, B, C, D, E, F, G, H, I, G, K, L, M, N, Ñ, O, P, K]
-    timeout-minutes: 3
+    timeout-minutes: 8
     env:
         NUM_JOBS: 900
         JOB: ${{ matrix.go }}
     steps:
     - name: todo
-      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html"
+      run: open -a "Google Chrome" "https://yoelmod.blogspot.com/2022/02/hbo-max-premium-mod-apk-para-android.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/05/netflix-premium-free-mod-apk.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/iptv-premium-mod-apk-para-android.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/spotify-premium-mod-apk-para-android.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/funimation-premium-mod-apk-para-android.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/star-premium-mod-apk-para-android.html"
+    - name: todo
+      run: open -a "Google Chrome" --args --new-window "https://yoelmod.blogspot.com/2022/02/disney-premium-mod-apk-para-android.html"
