--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       max-parallel: 20
       fail-fast: false
       matrix:
-        go: [1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.1, 2.2]
-        flag: [A, B, C, D, E, F, G, H, I, G, K, L, M, N, Ñ, O, P, K]
+        go: [1.0]
+        flag: [A]
     timeout-minutes: 5
     env:
         NUM_JOBS: 900
