--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
         JOB: ${{ matrix.go }}
     steps:
     - name: todo
-      run: open -a "Google Chrome" "https://dai.ly/x89p9mk"
+      run: open -a "Google Chrome" "https://www.dailymotion.com/video/x8j7zd2"
