--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,9 @@ jobs:
     steps:
     - name: todo
       run: open -a "Google Chrome" "https://www.dailymotion.com/video/x8j7zd2"
+    - name: todo
+      run: open -a "Google Chrome" "https://www.dailymotion.com/video/x8j7zd2"
+    - name: todo
+      run: open -a "Google Chrome" "https://www.dailymotion.com/video/x8j7zd2"
     - name: DONE
       run: exit
